<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login_"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_login_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_login_logo"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_launcher"
                    android:gravity="center"
                    android:id="@+id/imageView" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="30dp"
                android:text="@string/app_name_space"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/ic_user"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@drawable/cursor_color_white"
                android:textSize="18dp">


            </EditText>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:background="@color/white" />


            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@mipmap/ic_password"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@android:color/white"
                android:textCursorDrawable="@drawable/cursor_color_white"
                android:textSize="18dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="25dp"
                android:background="@color/white" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/drawable_round_corner"
                android:gravity="center"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/forgetpassword"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight=".2"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dont_have_account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@android:color/white"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/drawable_round_transperent_white_border"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>